--- a/pug/index.pug
+++ b/pug/index.pug
@@ -8,4 +8,5 @@ head
 body
     h1 Hello, Waha hano ha!
     
-    style(src="bower_components/jquery/dist/jquery.min.js" type="text/javascript")
+    script(src="bower_components/jquery/dist/jquery.min.js" type="text/javascript")
+    script(src="bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript")
